feat: circle image and spacing done

--- a/css/commons/pages/_stories.scss
+++ b/css/commons/pages/_stories.scss
@@ -1,7 +1,7 @@
 .storiesSection {
+  background-color: lightblue;
   margin-top: -6rem;
   padding: 8rem 0;
-  position: relative;
   &__header {
     text-align: center;
     margin-bottom: 6rem;
