--- a/css/commons/layouts/_story.scss
+++ b/css/commons/layouts/_story.scss
@@ -1,11 +1,18 @@
 .story {
-  display: flex;
-  width: 60rem;
-  padding: 3.5rem 5rem;
-  background-color: rgba(255, 255, 255, 0.75);
+  width: 56rem;
+  padding: 4rem 5rem;
+  background-color: rgba(255, 255, 255, 0.7);
   clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
 
+  &:not(:last-of-type) {
+    margin-bottom: 6rem;
+  }
+
   &__image {
+    float: left;
+    shape-outside: circle();
+    -webkit-shape-outside: circle();
+    margin-right: 4rem;
   }
 
   &__content {
