--- a/css/commons/layouts/_story.scss
+++ b/css/commons/layouts/_story.scss
@@ -3,6 +3,12 @@
   padding: 4rem 5rem;
   background-color: rgba(255, 255, 255, 0.7);
   clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
+  &:hover {
+    .story__image__caption {
+      transform: translate(-50%, -50%);
+      opacity: 1;
+    }
+  }
 
   &:not(:last-of-type) {
     margin-bottom: 6rem;
@@ -13,6 +19,16 @@
     shape-outside: circle();
     -webkit-shape-outside: circle();
     margin-right: 4rem;
+    position: relative;
+    &__caption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      text-align: center;
+      opacity: 0;
+      transition: all 0.8s;
+    }
   }
 
   &__content {
