--- a/css/commons/layouts/_story.scss
+++ b/css/commons/layouts/_story.scss
@@ -4,6 +4,10 @@
   background-color: rgba(255, 255, 255, 0.7);
   clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
   &:hover {
+    img {
+      transform: scale(1.1);
+      filter: blur(5px) brightness(80%);
+    }
     .story__image__caption {
       transform: translate(-50%, -50%);
       opacity: 1;
@@ -16,10 +20,16 @@
 
   &__image {
     float: left;
+    clip-path: circle(50% at 50% 50%);
     shape-outside: circle();
     -webkit-shape-outside: circle();
     margin-right: 4rem;
     position: relative;
+    img {
+      width: 10rem;
+      transform: scale(1.3);
+      transition: all 0.5s;
+    }
     &__caption {
       position: absolute;
       top: 50%;
@@ -27,7 +37,7 @@
       transform: translate(-50%, 50%);
       text-align: center;
       opacity: 0;
-      transition: all 0.8s;
+      transition: all 0.5s;
     }
   }
 
