--- a/css/style.css
+++ b/css/style.css
@@ -658,6 +658,13 @@ body {
           clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
 }
 
+.story:hover img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-filter: blur(5px) brightness(80%);
+          filter: blur(5px) brightness(80%);
+}
+
 .story:hover .story__image__caption {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -670,10 +677,20 @@ body {
 
 .story__image {
   float: left;
+  -webkit-clip-path: circle(50% at 50% 50%);
+          clip-path: circle(50% at 50% 50%);
   shape-outside: circle();
   -webkit-shape-outside: circle();
   margin-right: 4rem;
   position: relative;
+}
+
+.story__image img {
+  width: 10rem;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .story__image__caption {
@@ -684,8 +701,8 @@ body {
           transform: translate(-50%, 50%);
   text-align: center;
   opacity: 0;
-  -webkit-transition: all 0.8s;
-  transition: all 0.8s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .story__content p {
@@ -739,7 +756,6 @@ body {
 }
 
 .storiesSection {
-  background-color: lightblue;
   margin-top: -6rem;
   padding: 8rem 0;
 }
