--- a/css/commons/pages/_stories.scss
+++ b/css/commons/pages/_stories.scss
@@ -1,6 +1,8 @@
 .storiesSection {
   margin-top: -6rem;
   padding: 8rem 0;
+  position: relative;
+
   &__header {
     text-align: center;
     margin-bottom: 6rem;
