--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,14 @@ body {
           filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.2));
 }
 
+.u-form-polygon-background {
+  background-color: white;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
+          clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
+  opacity: 0.9;
+  padding: 2rem 4rem;
+}
+
 .btn {
   margin: 0 auto;
   padding: 1.2rem 2.5rem;
@@ -203,7 +211,7 @@ body {
 }
 
 .btn--green {
-  background-color: #2ecc71;
+  background-color: #e60060e5;
 }
 
 .btn--green a {
@@ -211,7 +219,7 @@ body {
 }
 
 .btn--green::after {
-  background-color: #2ecc71;
+  background-color: #e60060e5;
 }
 
 .btn--animated {
@@ -790,5 +798,25 @@ body {
 
 .storiesSection__footer {
   text-align: center;
+}
+
+.bookingSection {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#2ecc708c), to(#249b56ea));
+  background-image: linear-gradient(to bottom right, #2ecc708c, #249b56ea);
+  padding: 9rem 7rem;
+}
+
+.bookingSection__content {
+  background-image: url("../../../images/nat-10.jpg");
+  background-size: cover;
+}
+
+.bookingSection__form {
+  width: 42rem;
+  height: 32rem;
+}
+
+.bookingSection__title {
+  margin: 3rem 0;
 }
 /*# sourceMappingURL=style.css.map */
